# AIFMS

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_train.csv
src/aifms/: activity_logger.py  classifier.py  cli.py  extractor.py  gui.py  nlp.py  organizer.py  pipeline.py  scanner.py  training.py  types.py
