[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifms"
version = "0.1.0"
description = "AI-Based File Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scikit-learn>=1.4.0",
  "joblib>=1.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
