[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifms"
version = "0.1.0"
description = "AI-Based File Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scikit-learn>=1.4.0",
  "joblib>=1.4.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "PySide6>=6.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
